feat: adicionando ordenacao